ajuste route delete
